--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.4",
     "element-plus": "^1.0.2-beta.36",
+    "koa2-cors": "^2.0.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.5"
   },
